added hostnetwork to tcp spec
(cherry picked from commit 516958e777ba19fc91136afdff77dd18f7d2cee8)

--- a/charts/kamaji/crds/kamaji.clastix.io_tenantcontrolplanes.yaml
+++ b/charts/kamaji/crds/kamaji.clastix.io_tenantcontrolplanes.yaml
@@ -176,6 +176,10 @@ spec:
                                     type: string
                                 type: object
                               type: array
+                            useHostNetwork:
+                              default: false
+                              description: UseHostNetwork for Konnectivity agent.
+                              type: boolean
                             version:
                               description: |-
                                 Version for Konnectivity agent.
