fix: compilation & make manifests

--- a/charts/kamaji-crds/hack/kamaji.clastix.io_tenantcontrolplanes_spec.yaml
+++ b/charts/kamaji-crds/hack/kamaji.clastix.io_tenantcontrolplanes_spec.yaml
@@ -168,6 +168,10 @@ versions:
                                   type: string
                               type: object
                             type: array
+                          useHostNetwork:
+                            default: false
+                            description: UseHostNetwork for Konnectivity agent.
+                            type: boolean
                           version:
                             description: |-
                               Version for Konnectivity agent.
