--- a/.github/workflows/helm.yaml
+++ b/.github/workflows/helm.yaml
@@ -2,7 +2,7 @@ name: Helm Chart
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master", "main" ]
   pull_request:
     branches: [ "*" ]
 
@@ -29,7 +29,7 @@ jobs:
           version: 3.3.4
       - name: Building dependencies
         run: |-
-          helm repo add clastix https://clastix.github.io/charts 
+          helm repo add pf9-kamaji https://platform9.github.io/kamaji 
           helm dependency build ./charts/kamaji
       - name: Linting Kamaji Helm Chart
         run: helm lint ./charts/kamaji
@@ -45,11 +45,3 @@ jobs:
         uses: stefanprodan/helm-gh-pages@master
         with:
           token: ${{ secrets.BOT_GITHUB_TOKEN }}
-          charts_dir: charts
-          charts_url: https://clastix.github.io/charts
-          owner: clastix
-          repository: charts
-          branch: gh-pages
-          target_dir: .
-          commit_username: prometherion
-          commit_email: dario@tranchitella.eu
