--- a/.github/workflows/ko-build.yml
+++ b/.github/workflows/ko-build.yml
@@ -36,6 +36,6 @@ jobs:
       - name: "ko: login to docker.io container registry"
         run: ./bin/ko login docker.io -u ${{ secrets.DOCKER_IO_USERNAME }} -p ${{ secrets.DOCKER_IO_TOKEN }}
       - name: "ko: build and push tag"
-        run: CONTAINER_REPOSITORY=quay.io/platform9/kamaji make VERSION=${{ IMAGE_TAG }} KO_LOCAL=false KO_PUSH=true build
+        run: CONTAINER_REPOSITORY=quay.io/platform9/kamaji make VERSION=${{ env.IMAGE_TAG }} KO_LOCAL=false KO_PUSH=true build
       - name: "ko: build and push latest"
         run: CONTAINER_REPOSITORY=quay.io/platform9/kamaji make VERSION=latest KO_LOCAL=false KO_PUSH=true build
