--- a/.github/workflows/ko-build.yml
+++ b/.github/workflows/ko-build.yml
@@ -37,5 +37,7 @@ jobs:
         run: ./bin/ko login docker.io -u ${{ secrets.DOCKER_IO_USERNAME }} -p ${{ secrets.DOCKER_IO_TOKEN }}
       - name: "ko: build and push tag"
         run: CONTAINER_REPOSITORY=quay.io/platform9/kamaji make VERSION=${{ env.IMAGE_TAG }} KO_LOCAL=false KO_PUSH=true build
+        if: github.event_name == 'workflow_dispatch' || github.event_name == 'push'
+        # if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v') || startsWith(github.ref, 'refs/tags/ci')
       - name: "ko: build and push latest"
         run: CONTAINER_REPOSITORY=quay.io/platform9/kamaji make VERSION=latest KO_LOCAL=false KO_PUSH=true build
