--- a/.github/workflows/pf9-helm.yml
+++ b/.github/workflows/pf9-helm.yml
@@ -21,12 +21,14 @@ jobs:
       - uses: actions/checkout@v5
         with:
           fetch-depth: 0
+      - name: install helm
+        run: make helm
       - name: helm login
         run: helm login https://quay.io -u ${{ secrets.QUAY_IO_USERNAME }} -p ${{ secrets.QUAY_IO_TOKEN }}
-      - name: helm push
+      - name: helm build & push with tag
         run: APP_VERSION=${{ env.TAG }} CHART_VERSION=${{ env.TAG }} make helm-push
         if: github.event_name == 'workflow_dispatch' || (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v'))
-      - name: helm push latest
+      - name: helm build & push latest
         run: APP_VERSION=latest CHART_VERSION=0.0.0+latest make helm-push
         if: github.event_name == 'workflow_dispatch' || (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v'))
 
