feat: use kubernetes featuregates to generate the kubelet config
(cherry picked from commit 79013bab03ea4025615a875018560a1f302f7495)

--- a/charts/kamaji-crds/hack/kamaji.clastix.io_tenantcontrolplanes_spec.yaml
+++ b/charts/kamaji-crds/hack/kamaji.clastix.io_tenantcontrolplanes_spec.yaml
@@ -7118,6 +7118,11 @@ versions:
                           - systemd
                           - cgroupfs
                         type: string
+                      featureGates:
+                        additionalProperties:
+                          type: boolean
+                        description: FeatureGates defines the kubernetes feature gates used to generate the kubelet configuration
+                        type: object
                       preferredAddressTypes:
                         default:
                           - InternalIP
