--- a/charts/kamaji/crds/kamaji.clastix.io_tenantcontrolplanes.yaml
+++ b/charts/kamaji/crds/kamaji.clastix.io_tenantcontrolplanes.yaml
@@ -7126,6 +7126,11 @@ spec:
                             - systemd
                             - cgroupfs
                           type: string
+                        featureGates:
+                          additionalProperties:
+                            type: boolean
+                          description: FeatureGates defines the kubernetes feature gates used to generate the kubelet configuration
+                          type: object
                         preferredAddressTypes:
                           default:
                             - InternalIP
