--- a/charts/kamaji/Chart.yaml
+++ b/charts/kamaji/Chart.yaml
@@ -5,24 +5,24 @@ home: https://github.com/clastix/kamaji
 icon: https://github.com/clastix/kamaji/raw/master/assets/logo-colored.png
 kubeVersion: ">=1.21.0-0"
 maintainers:
-- email: dario@tranchitella.eu
-  name: Dario Tranchitella
-  url: https://clastix.io
-- email: me@maxgio.it
-  name: Massimiliano Giovagnoli
-- email: me@bsctl.io
-  name: Adriano Pezzuto
-  url: https://clastix.io
+  - email: dario@tranchitella.eu
+    name: Dario Tranchitella
+    url: https://clastix.io
+  - email: me@maxgio.it
+    name: Massimiliano Giovagnoli
+  - email: me@bsctl.io
+    name: Adriano Pezzuto
+    url: https://clastix.io
 name: kamaji
 sources:
-- https://github.com/clastix/kamaji
+  - https://github.com/clastix/kamaji
 type: application
 version: 0.0.0+latest
 dependencies:
-- name: kamaji-etcd
-  repository: https://clastix.github.io/charts
-  version: ">=0.11.0"
-  condition: kamaji-etcd.deploy
+  - name: kamaji-etcd
+    repository: https://clastix.github.io/charts
+    version: "0.14.0"
+    condition: kamaji-etcd.deploy
 annotations:
   catalog.cattle.io/certified: partner
   catalog.cattle.io/release-name: kamaji
